--- a/hugo.yaml
+++ b/hugo.yaml
@@ -140,8 +140,8 @@ params:
 
   author:
     name: "Adhitama Fikri Kusumahendra W"
-    title: "Software Engineer - Frontend with 6 years of experience"
-    description: "Focused on content and user experience."
+    title: "A Frontend-focused Software Engineer with 5+ years of experience. Helped companies building their Online Marketplace Platforms, Help Center Platforms and Integrate 3rd party SDKs to create useful widgets. Currently on a journey to Fullstack Engineer"
+    description: ""
     avatar: "/images/avatar.svg"
     social:
       - name: "GitHub"
